// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.Radios check default default props from Mixins UU5.Forms.GroupMixin 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios check default default props from Mixins UU5.Forms.Radios Common.Mixins 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID2"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props bgStyleChecked="filled" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-filled uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props bgStyleChecked="outline" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props className="my-classname" 1`] = `
<div
  className="uu5-forms-radios my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props className="test-classname" 1`] = `
<div
  className="uu5-forms-radios test-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props controlled=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props controlled=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props default props 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props disabled=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props disabled=false 3`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props disabled=true 1`] = `
<div
  className="uu5-forms-radios uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props disabled=true 3`] = `
<div
  className="uu5-forms-radios uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props feedback="error" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props feedback="initial" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props feedback="loading" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props feedback="success" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props feedback="warning" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-forms-radios uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props function -> Forms.InputMixin onChange() 1`] = `
<Radios
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Radio 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Radios props function -> Forms.InputMixin onChangeFeedback() 1`] = `
<Radios
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Radio 1",
        "name": "box1",
        "value": false,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Radios props function -> Forms.InputMixin onChangeFeedback() 2`] = `
<Radios
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Radio 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Radios props function -> Forms.InputMixin onValidate() 1`] = `
<Radios
  id="checkID"
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onValidate={[Function]}
  value={
    Array [
      Object {
        "label": "Radio 1",
        "name": "box1",
        "value": true,
      },
    ]
  }
/>
`;

exports[`UU5.Forms.Radios props hidden=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props hidden=false 3`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props hidden=true 1`] = `
<div
  className="uu5-forms-radios uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props hidden=true 3`] = `
<div
  className="uu5-forms-radios uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props icon="mdi-ok" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props id="myId" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props id="test-id" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="test-id"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props inline=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props inline=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-forms-inputs-inline uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props label="Your personal email" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
>
  <label
    className="uu5-forms-input-label-right"
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props labelPosition="left" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props labelPosition="right" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props name="myName" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props nestingLevel="box" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props nestingLevel="inline" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-inline uu5-forms-input-auto-width uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props noIndex=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props noIndex=true 1`] = `
<div
  className="uu5-forms-radios uu5-noindex uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props noPrint=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props noPrint=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props pureRender=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props pureRender=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props readOnly=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props readOnly=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
  />
</div>
`;

exports[`UU5.Forms.Radios props required=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props required=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    required={true}
  />
</div>
`;

exports[`UU5.Forms.Radios props requiredMessage="Položka je povinná!" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props selected=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props selected=true 1`] = `
<div
  className="uu5-forms-radios uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props selectionBackground=false 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props selectionBackground=true 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props selectionBorderRadius="8px 16px" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props selectionBorderRadius=8 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props size="l" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-l uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props size="m" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props size="s" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props style={"margin":8} 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;

exports[`UU5.Forms.Radios props value=undefined 1`] = `
<div
  className="uu5-forms-radios uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-prevent-wrap uu5-common-bg-style-outline uu5-forms-radios-selection-background"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  />
</div>
`;
